# nurs

./: Cargo.toml  LICENSE  README.md
src/: config.rs  logger.rs  main.rs  profile.rs  slurm.rs
