[package]
name = "nurs"
version = "0.1.0"
authors = ["Seokjin Han <seokjin.han@standigm.com>"]
edition = "2021"
description = "nurs makes srun easy to use with predefined configurations"
readme = "README.md"
homepage = "https://github.com/raifthenerd/nurs"
repository = "https://github.com/raifthenerd/nurs"
license = "BSD-3-Clause"
keywords = ["slurm", "cluster", "hpc"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1"
log = { version = "0.4", features = ["max_level_debug"]}
log4rs = "1"
directories-next = "2"
toml = "0.5"
serde = { version = "1", features = ["derive"] }

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
